--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,17 @@
-body {
-    font-family: sans-serif;
-  }
-.tomato{
-  background-color: tomato;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+
+.result{
+  font-weight: 600;
 }
-.blue{
-  background-color: blue;
+div span:last-child{
+  display:flex;
+  flex-direction: column;
 }
-.green{
-  background-color: green;
+body{
+  font-family: "Open Sans", sans-serif;
 }
-.greenyello{
-  background-color: greenyellow;
-}
-.yello{
-  background-color: yellow;
+.GenerateNum{
+  font-weight: 600;
+  font-size:20px;
+  padding-bottom: 30px;
 }
